--- a/style.css
+++ b/style.css
@@ -291,7 +291,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c1d36f', end
 .fdr-wrapper .fire-forecast .fdr-noforecast .danger-level { font-size:12px; }
 
 /* Current Weather Widget */
-.fdr-wrapper .temprature-title { font-size: 57px; line-height: 57px; font-weight: bold; margin:0; letter-spacing: -1px; }
+.fdr-wrapper .temperature-title { font-size: 57px; line-height: 57px; font-weight: bold; margin:0; letter-spacing: -1px; }
 .fdr-wrapper .wind-title { font-size: 30px; line-height: 30px; margin-top:10px; margin-bottom:15px; font-weight: 400; letter-spacing: -1px; }
 
 /* FDR Chart Widget */
